fix menu wrong position

--- a/css/main.css
+++ b/css/main.css
@@ -29,10 +29,13 @@ html {
 .hd-main {
 	width: 960px;
 	margin: 0 auto;
+	position: relative;
 }
 
 .menus {
-	float: right;
+	position: absolute;
+	right: 0;
+	top: 0;
 	margin-top: 6px;
 }
 .menus a {
